<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/game_mode_tournament_item"
        android:checkable="true"
        android:title="@string/game_mode_tournament_2teams" />
    <item android:id="@+id/game_mode_boss_item"
        android:checkable="true"
        android:title="@string/game_mode_boss" />
    <item android:id="@+id/game_mode_2teams_item"
        android:checkable="true"
        android:title="@string/game_mode_2teams"
        android:visible="true" />
    <item android:id="@+id/game_mode_4teams_item"
        android:checkable="true"
        android:title="@string/game_mode_4teams"
        android:visible="true" />
    <item android:id="@+id/game_mode_ffa_item"
        android:checkable="true"
        android:title="@string/game_mode_ffa"
        android:visible="true" />
    <item android:id="@+id/game_mode_balanced_qr_item"
        android:title="@string/game_mode_balanced_qr"
        android:visible="false" />
    <item android:id="@+id/game_mode_balanced_no_qr_item"
        android:title="@string/game_mode_balanced_no_qr"
        android:visible="false" />
</menu>
